--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -75,6 +75,7 @@
 			<field name="sale_order_id"/>
 			<field name="sale_order_line_id"/>
 			<field name="cliente_id"/>
+			<field name="disponible"/>
                 </xpath>
                 
 				
