--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -28,6 +28,7 @@
         
 			<field name="state" position="before">
 				<field name="peso_neto" sum="Peso Neto"/>
+				<field name="importe_calculado"/>
 				<field name="importe_incorrecto"/>
 			</field>
 
