--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -26,7 +26,7 @@
         <field name="inherit_id" ref="account.invoice_tree"/>
         <field name="arch" type="xml">
         
-			<field name="origin" position="after">
+			<field name="amount_tax_signed" position="before">
 				<field name="importe_calculado"/>
 				<field name="importe_incorrecto"/>
 			</field>
