--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -65,6 +65,8 @@
 			</xpath>
 			<xpath expr="//field[@name='state']" position="after">
 				<field name="estado"/>
+                <field name="pendiente_facturar"/>
+                <field name="pendiente_cobrar"/>
 			</xpath>
 		</field>
 	</record>
