--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -201,10 +201,12 @@
                     <field name='lot_id' />
                     <field name='operario_id' />
                     <field name='maquina' />
-                    <field name='hora_inicio' widget="float_time"/>
+                    <field name='fecha_inicio' />
                     <field name='und_inicio' />
-                    <field name='hora_fin'  widget="float_time"/>
-                    <field name='und_final' />
+                    <field name='fecha_fin' />
+                    <field name='und_fin' />
+		    <field name='metros' />
+		    <field name='kilos' />
                 </tree>
             </field>
         </record>
@@ -220,10 +222,10 @@
                             <field name='lot_id' />
                             <field name='operario_id' />
                             <field name='maquina' />
-                            <field name='hora_inicio' widget="float_time"/>
+                            <field name='fecha_inicio' />
                             <field name='und_inicio' />
-                            <field name='hora_fin'  widget="float_time"/>
-                            <field name='und_final' />
+                            <field name='fecha_fin' />
+                            <field name='und_fin' />
                         </group>
                         
                     </sheet>
@@ -240,10 +242,10 @@
                     <field name='lot_id' />
                     <field name='operario_id' />
                     <field name='maquina' />
-                    <field name='hora_inicio' widget="float_time"/>
+                    <field name='fecha_inicio' />
                     <field name='und_inicio' />
-                    <field name='hora_fin'  widget="float_time"/>
-                    <field name='und_final' />
+                    <field name='fecha_fin' />
+                    <field name='und_fin' />
                     
                     <group expand="0" string="Agrupar por">
                         <filter name="group_by_lot_id" string="Lote" domain="[]" context="{'group_by':'lot_id'}"/>
