--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -38,10 +38,10 @@
                             <field name='lot_id' invisible="1" />
                             <field name='operario_id' />
                             <field name='maquina' />
-                            <field name='hora_inicio' widget="float_time"/>
+                            <field name='fecha_inicio'/>
                             <field name='und_inicio' />
-                            <field name='hora_fin'  widget="float_time"/>
-                            <field name='und_final' />
+                            <field name='fecha_fin'/>
+                            <field name='und_fin' />
                         </tree>
                     </field>   
                 </group>
@@ -226,6 +226,8 @@
                             <field name='und_inicio' />
                             <field name='fecha_fin' />
                             <field name='und_fin' />
+			    <field name='metros' />
+		            <field name='kilos' />
                         </group>
                         
                     </sheet>
@@ -246,6 +248,8 @@
                     <field name='und_inicio' />
                     <field name='fecha_fin' />
                     <field name='und_fin' />
+		    <field name='metros' />
+		    <field name='kilos' />
                     
                     <group expand="0" string="Agrupar por">
                         <filter name="group_by_lot_id" string="Lote" domain="[]" context="{'group_by':'lot_id'}"/>
