--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -76,6 +76,7 @@
         <field name="arch" type="xml">
         
                 <xpath expr="//field[@name='name']" position="after">
+			<field name="metido"/>
 			<field name="referencia_id"/>
 			<field name="unidades"/>
 			<field name="peso_neto"  sum="Peso"/>
