--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -34,6 +34,7 @@
 		
 		<field name="state" position="before">
 			<field name="peso_neto" sum="Peso Neto"/>
+			<field name="actualizar"/>
 		</field>
 
             
