--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -36,6 +36,10 @@
 			<field name="peso_neto" sum="Peso Neto"/>
 			<field name="actualizar"/>
 		</field>
+		
+		<field name="user_id" position="attributes">
+			<attribute name="invisible">1</attribute>
+		</field>
 
             
         </field>
