--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -34,6 +34,8 @@
 		
 		<field name="state" position="before">
 			<field name="peso_neto" sum="Peso Neto"/>
+			<field name="peso_cantonera" sum="Peso Cantonera"/>
+			<field name="peso_slisheet" sum="Peso SlipSheet"/>
 			<field name="actualizar"/>
 		</field>
 		
