--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -93,6 +93,7 @@
 			<field name="sale_order_line_id"/>
 			<field name="cliente_id"/>
 			<field name="disponible"/>
+			<field name="almacen"/>
                 </xpath>
                 
 				
