--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -28,6 +28,7 @@
                 <field name="fecha_entrada"/>
 		<field name="comentario"/>
 		<field name="descripcion"/>
+		<field name="cambiar_etiqueta"/>
                 
 		<field name="peso_metro"/>
 
