--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
         
             <xpath expr="//field[@name='product_id']" position="after">
+                <field name="precinto_contenedor"/>
                 <field name="orden_fabricacion"/>
 
 
