--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -7,13 +7,12 @@
         <field name="arch" type="xml">
         
             <xpath expr="//field[@name='product_id']" position="after">
-                <field name="precinto_contenedor"/>
                 <field name="orden_fabricacion"/>
-
-
             </xpath>
             
-            
+            <xpath expr="//field[@name='invoice_ids']" position="after">
+                <field name="precinto_contenedor"/>
+            </xpath>
             
             
         </field>
