--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -213,6 +213,7 @@
                     <field name='und_inicio' />
                     <field name='fecha_fin' />
                     <field name='und_fin' />
+		    <field name='minutos' />
 		    <field name='metros' />
 		    <field name='kilos' />
                 </tree>
@@ -228,16 +229,16 @@
                     <sheet>
                         <group>
                             <field name='lot_id' />
-							<field name='trabajador' />
-							<field name='maquina' />
+			    <field name='trabajador' />
+			    <field name='maquina' />
                             <field name='tarea' />
                             <field name='fecha_inicio' />
                             <field name='und_inicio' />
                             <field name='fecha_fin' />
-							<field name='minutos' />
                             <field name='und_fin' />
-							<field name='metros' />
-							<field name='kilos' />
+			    <field name='minutos' />
+			    <field name='metros' />
+			    <field name='kilos' />
                         </group>
                         
                     </sheet>
@@ -258,12 +259,13 @@
                     <field name='und_inicio' />
                     <field name='fecha_fin' />
                     <field name='und_fin' />
+		    <field name='minutos' />
 		    <field name='metros' />
 		    <field name='kilos' />
                     
                     <group expand="0" string="Agrupar por">
                         <filter name="group_by_lot_id" string="Lote" domain="[]" context="{'group_by':'lot_id'}"/>
-                        <filter name="group_by_operario_id" string="Operario" domain="[]" context="{'group_by':'operario_id'}"/>
+                        <filter name="group_by_operario_id" string="Trabajador" domain="[]" context="{'group_by':'trabajador'}"/>
                     </group>
                 </search>
             </field>
