--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -10,9 +10,9 @@
                 <field name="orden_fabricacion"/>
             </xpath>
             
-            <xpath expr="//field[@name='invoice_ids']" position="after">
+            <!--<xpath expr="//field[@name='invoice_ids']" position="after">
                 <field name="precinto_contenedor"/>
-            </xpath>
+            </xpath>-->
             
             
         </field>
