--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -2,13 +2,13 @@
 <odoo>
 
 
-    <act_window id="launch_wizard_partner_sale_order"
+    <!--<act_window id="launch_wizard_partner_sale_order"
             name="Crear pedido"
             src_model="res.partner"
             res_model="wizard.partner.sale.order"
             view_mode="form"
             target="new"
-            key2="client_action_multi"/>
+            key2="client_action_multi"/>-->
             
             
     <record model="ir.ui.view" id="wizard_form_view">
