--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -310,7 +310,7 @@
                                 <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '!=', '5')], 'readonly': [('no_editar', '=', True)]}"/>
 			</group>
                             <group>
-				<field name='no_editar' invisible ="1"/>
+				<field name='no_editar'/>
                                 <h3>Unidades por Pallet:</h3>
                                 <field name='alto_pallet_text' />
                                 <field name='peso_neto_text' />
